# mosaic

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
setup/: opencv.sh
src/common/: Image.cpp  Image.h  Thumbnail.cpp  Thumbnail.h
src/standard/: main.cpp
src/wasm/: Image.cpp  Image.h  main.cpp
static/: js-test.html
