cmake_minimum_required(VERSION 2.8)
project( Mosaic )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ./src/common )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g")
set(SOURCES ./src/standard/main.cpp ./src/common/Image.cpp)
add_executable( mosaic ${SOURCES} )
target_link_libraries( mosaic ${OpenCV_LIBS} )
add_library (Image ./src/common/Image.cpp)
target_include_directories (Image PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
